tests/ui/g-control-resource-zero-tag.stderr
error[E0080]: evaluation panicked: control resource tag 0 is reserved
 --> src/global.rs
  |
  |         crate::global::validate_send_contract::<From, To, M>();
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `hibana::g::send::<hibana::g::Role<0>, hibana::g::Role<1>, hibana::g::Msg<124, hibana::integration::cap::GenericCapToken<ZeroTagControlKind>, ZeroTagControlKind>, 0>::{constant#0}` failed inside this call
  |
note: inside `hibana::global::validate_send_contract::<Role<0>, Role<1>, Msg<124, GenericCapToken<ZeroTagControlKind>, ZeroTagControlKind>>`
 --> src/global.rs
  |
  |     validate_message_control_contract::<M>();
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `hibana::global::validate_message_control_contract::<Msg<124, GenericCapToken<ZeroTagControlKind>, ZeroTagControlKind>>`
 --> src/global.rs
  |
  |         2 => validate_token_control_payload_contract(spec),
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `hibana::global::validate_token_control_payload_contract`
 --> src/global.rs
  |
  |     validate_control_descriptor_contract(spec);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `hibana::global::validate_control_descriptor_contract`
 --> $RUST/core/src/panic.rs
  |
  = note: the failure occurred here
  |
 ::: src/global.rs
  |
  |         panic!("control resource tag 0 is reserved");
  |         -------------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/global.rs
  |
  | /     const {
  | |         crate::global::validate_send_contract::<From, To, M>();
  | |     }
  | |_____^

note: the above error was encountered while instantiating `fn send::<Role<0>, Role<1>, Msg<124, GenericCapToken<ZeroTagControlKind>, ZeroTagControlKind>, 0>`
  --> tests/ui/g-control-resource-zero-tag.rs:37:13
   |
37 |       let _ = g::send::<
   |  _____________^
38 | |         g::Role<0>,
39 | |         g::Role<1>,
40 | |         g::Msg<ZERO_TAG_CONTROL_LOGICAL, GenericCapToken<ZeroTagControlKind>, ZeroTagControlKind>,
41 | |         0,
42 | |     >();
   | |_______^
